[package]
name = "bundlrs"
authors = ["hkau"]
license = "MIT"

version = "0.10.3"
edition = "2021"

rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
postgres = []
mysql = []
sqlite = []
default = ["sqlite"]

[dependencies]
actix-files = "0.6.5"
actix-web = "4.4.1"
comrak = "0.21.0"
dotenv = "0.15.0"
either = "1.9.0"
env_logger = "0.11.2"
hex_fmt = "0.3.0"
idna = "0.5.0"
once_cell = "1.19.0"
pest = "2.7.7"
pest_derive = "2.7.7"
regex = "1.10.2"
serde = "1.0.195"
serde_json = "1.0.111"
sha2 = "0.10.8"
sqlx = { version = "0.7.3", features = [
    "sqlite",
    "postgres",
    "mysql",
    "any",
    "runtime-tokio",
    "tls-native-tls",
] }
uuid = { version = "1.6.1", features = ["v4"] }
yew = { version = "0.21.0", features = ["ssr"] }
