[package]
name = "crangon"
authors = ["hkau"]
license = "MIT"

version = "0.15.0"
edition = "2021"

rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
postgres = ["dorsal/postgres"]
mysql = ["dorsal/mysql"]
sqlite = ["dorsal/sqlite"]
default = ["dorsal/sqlite"]

[dependencies]
actix-files = "0.6.5"
actix-web = "4.4.1"
dotenv = "0.15.0"
either = "1.9.0"
env_logger = "0.11.2"
hex_fmt = "0.3.0"
idna = "0.5.0"
once_cell = "1.19.0"
pest_derive = "2.7.7"
serde = "1.0.195"
serde_json = "1.0.111"
sha2 = "0.10.8"
uuid = { version = "1.6.1", features = ["v4"] }
actix-cors = "0.7.0"
askama = "0.12.1"
sqlx = "0.7.4"
regex = "1.10.4"
dorsal = { version = "0.1.7", default-features = false }
sauropod = "0.1.1"
awc = "3.5.0"
