[package]
name = "pastemd"
description = "Pluggable pastebin backend"
authors = ["hkau"]
license = "MIT"

version = "0.6.0-compat"
edition = "2021"

documentation = "https://docs.rs/pastemd"
repository = "https://github.com/hkauso/pastemd"
categories = ["web-programming", "database"]

[package.metadata.docs.rs]
features = ["sqlite"]
no-default-features = true

[features]
postgres = ["dorsal/postgres"]
mysql = ["dorsal/mysql"]
sqlite = ["dorsal/sqlite"]
# default = ["dorsal/sqlite"] # for development

[dependencies]
axum = "0.7.5"
axum-macros = "0.4.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
dorsal = { version = "0.1.5", default-features = false }
dotenv = "0.15.0"
regex = "1.10.5"
idna = "1.0.0"
axum-extra = { version = "0.9.3", features = ["cookie"] }
